ingress/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /upload(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
      - path: /upload(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 443
      - path: /validate(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: resumevalidate-service
            port:
              number: 80
      - path: /validate(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: resumevalidate-service
            port:
              number: 443
      - path: /mysql
        pathType: Prefix
        backend:
          service:
            name: mysql-resume-validate-service
            port:
              number: 3306
